--- a/deploy/webapp.conf
+++ b/deploy/webapp.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name zAzXDGo9AXoHA3j6axosWfFLK.battlesnake.werdler.com;
+    server_name zAzXDGo9AXoHA3j6axosWfFLK.battlesnake.werdler.net;
     root /home/app/webapp/public;
 
     # The following deploys your Ruby/Python/Node.js/Meteor app on Passenger.
