Pre-start passenger application to remove warmup time

--- a/deploy/webapp.conf
+++ b/deploy/webapp.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name *.battlesnake.werdler.net;
+    server_name battlesnake.zilverline.com;
     root /home/app/webapp/public;
 
     # The following deploys your Ruby/Python/Node.js/Meteor app on Passenger.
@@ -10,6 +10,7 @@ server {
     # socket setup, process management, etc are all taken care automatically for
     # you! Learn more at https://www.phusionpassenger.com/.
     passenger_enabled on;
+    passenger_min_instances 1;
     passenger_user app;
     passenger_ruby /usr/bin/ruby3.4;
 
@@ -17,3 +18,5 @@ server {
     # to file uploads. The following line enables uploads of up to 50 MB:
     client_max_body_size 50M;
 }
+
+passenger_pre_start http://battlesnake.zilverline.com/;
